--- a/src/tests/tests.csproj
+++ b/src/tests/tests.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
 
     <ProjectReference Include="..\01-onlyOne\01-onlyOne.csproj" />
+    <ProjectReference Include="..\02-callback\02-callback.csproj" />
   </ItemGroup>
 
 </Project>
